add task page complete (html and css).

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
 html,
 body {
   margin: 0;
@@ -11,5 +13,9 @@ body {
 }
 
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Inter";
+}
+
+button:hover {
+  cursor: pointer;
 }
