--- a/src/components/Task/Task.module.css
+++ b/src/components/Task/Task.module.css
@@ -22,6 +22,26 @@
   gap: 1rem;
 }
 
+.rightItems {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.whiteIcon,
+.actionableWhiteIcon {
+  filter: brightness(0) saturate(100%) invert(96%) sepia(66%) saturate(0%)
+    hue-rotate(179deg) brightness(111%) contrast(100%);
+}
+
+.actionableWhiteIcon:hover {
+  filter: brightness(0) saturate(100%) invert(34%) sepia(91%) saturate(2689%)
+    hue-rotate(339deg) brightness(80%) contrast(106%);
+
+  border-radius: 50%;
+  background-color: #000;
+}
+
 .taskCheck {
   width: 2.5rem;
   height: 2.5rem;
