--- a/src/components/Task/Task.module.css
+++ b/src/components/Task/Task.module.css
@@ -34,7 +34,8 @@
     hue-rotate(179deg) brightness(111%) contrast(100%);
 }
 
-.actionableWhiteIcon:hover {
+.actionableWhiteIcon:hover,
+.checkedTask {
   filter: brightness(0) saturate(100%) invert(34%) sepia(91%) saturate(2689%)
     hue-rotate(339deg) brightness(80%) contrast(106%);
 }
