--- a/src/components/Alert/Alert.module.css
+++ b/src/components/Alert/Alert.module.css
@@ -14,4 +14,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  -webkit-animation: slide 0.5s forwards;
+  -webkit-animation-delay: 2s;
+  animation: slide 0.5s forwards;
+  animation-delay: 2s;
+}
+
+@-webkit-keyframes slide {
+  100% {
+    top: -10%;
+  }
+}
+
+@keyframes slide {
+  100% {
+    top: -10%;
+  }
 }
